--- a/xml-util/pom.xml
+++ b/xml-util/pom.xml
@@ -21,9 +21,17 @@
 			<artifactId>xmlbeans</artifactId>
 			<version>${xmlbeans.version}</version>
 		</dependency>
+		<!-- jsonpath -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20131018</version>
+		</dependency>
+
 	</dependencies>
 	<properties>
 		<junit.version>4.8.2</junit.version>
+		<jsonpath.version>1.2.0</jsonpath.version>
 		<xmlbeans.version>2.4.0</xmlbeans.version>
 	</properties>
 </project>
